--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
     <title>CRUD APPLICATION</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-   git    
+<body style="padding:5%;">
+    <div class="bg-dark text-white p-5">
+        <div class="container justify-content-center">
+            <div class="text-center mt-3 mb-4">
+                <h1>CRUD APPLICATION</h1>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="text" class="col mb-3 form-control  border-primary border-3" id="textInput" placeholder="Enter your Task....">
+                </div>
+                <div class="col-auto">
+                    <button class="btn btn-primary">SubmitTask</button>
+                </div>
+            </div>
+            <table class="table table-striped mb-5 mt-5 fs-5">
+                <thead class="">
+                    <tr class="text-center">
+                        <th class="col">Sr.no</th>
+                        <th class="col">Tasks</th>
+                        <th class="col">Action</th>
+                    </tr>
+                    <tbody id="taskInput">
+
+                    </tbody>
+                </thead>
+            </table>
+        </div>
+    </div>    
     <!-- bootstrap cdn of js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- script file which will be  used by html-->
