--- a/index.html
+++ b/index.html
@@ -4,38 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD APPLICATION</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Task Manager</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Optional: Add custom styles here */
+        body {
+            padding: 20px;
+        }
+    </style>
 </head>
-<body style="padding:5%;">
-    <div class="bg-dark text-white p-5">
-        <div class="container justify-content-center">
-            <div class="text-center mt-3 mb-4">
-                <h1>CRUD APPLICATION</h1>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <input type="text" class="col mb-3 form-control  border-primary border-3" id="textInput" placeholder="Enter your Task....">
-                </div>
-                <div class="col-auto">
-                    <button class="btn btn-primary">SubmitTask</button>
-                </div>
-            </div>
-            <table class="table table-striped mb-5 mt-5 fs-5">
-                <thead class="">
-                    <tr class="text-center">
-                        <th class="col">Sr.no</th>
-                        <th class="col">Tasks</th>
-                        <th class="col">Action</th>
-                    </tr>
-                    <tbody id="taskInput">
+<body>
+  <div class="bg-dark p-5 text-white text-center"> 
+    <div class="container">
+        <h1 class="my-4">Task Manager</h1>
 
-                    </tbody>
-                </thead>
-            </table>
+        <!-- Task Input and Add Button -->
+        <div class="input-group col mb-3">
+            <input type="text" id="textInput" class="form-control" placeholder="Enter a new task" aria-label="Task">
+            <div class="input-group-append">
+                <button class="btn btn-primary " type="button" onclick="addTask()">Add Task</button>
+            </div>
         </div>
-    </div>    
-    <!-- bootstrap cdn of js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- script file which will be  used by html-->
-     <script src="script.js"></script>
+
+        <!-- Task List Table -->
+        <table class="table table-striped text-white fs-1">
+            <thead>
+                <tr>
+                    <th scope="col">Sr.no</th>
+                    <th scope="col">Task</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody id="taskList">
+                <!-- Tasks will be dynamically added here -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Bootstrap JS and dependencies (jQuery, Popper.js) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+</div> 
 </body>
